// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportChannelForm renders component 1`] = `
<Memo(WithStyles(Modal))
  handleClose={[MockFunction]}
  open={true}
  title="Import channel"
>
  <Connect(ImportChannelForm) />
  <Connect(Component) />
</Memo(WithStyles(Modal))>
`;

exports[`ImportChannelForm renders component closed 1`] = `
<Memo(WithStyles(Modal))
  handleClose={[MockFunction]}
  open={false}
  title="Import channel"
>
  <Connect(ImportChannelForm) />
  <Connect(Component) />
</Memo(WithStyles(Modal))>
`;
